HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/ImplementationAbstractMethodSignatureMismatch/Expected.uv
//! Expected diagnostic metadata for the ImplementationAbstractMethodSignatureMismatch rejected-source specimen.

expectedDiagnostic("E-TYP-2503", "rule.14.Impl-Sig-Err")
